Created introduction file for Methodology. Added start of xp-explained.

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -1,4 +1,9 @@
-\section{eXtreme Programming explained}
-What is the XP methodology?
-What does Extreme mean? E.g. Review is much more important and useful, so turn it up in comparison to other methodologies.
-Start of Beck books.
+\section{Extreme Programming explained}
+% 2 XP's: 2000 and 200? - differences.
+% General introduction to XP2k
+Extreme Programming (XP) is a software development methodology created by Kent Beck, and this section is based on his book \textit{Extreme Programming Explained} \citep{xp:explained}. According to Beck, XP is ``\textit{a lightewight, efficient, low-risk, flexible, predictable, scientific, and fun way to develop software.}''
+%% What is XP?
+%% What makes it extreme?
+%%%% Transition to pratices
+
+% The practices
