--- a/Content/TempoPlayer/tour.tex
+++ b/Content/TempoPlayer/tour.tex
@@ -3,7 +3,7 @@ Tempo player is an application for the Android platform, which is able to play a
 
 \begin{figure}[h!]
   \centering
-    \includegraphics[scale=0.1]{Images/Screenshots/mainScreen.png}
+    \includegraphics[scale=0.2]{Images/Screenshots/mainScreen.png}
   \caption{A screenshot showing Tempo Player's main screen.}
   \label{fig:mainScreen}
 \end{figure}
@@ -23,15 +23,18 @@ It is also possible to seek to a position in the currently playing song by dragg
 %i.e. Tempo Player is a music player that utilises the accelerometer to count the steps of the user. 
 %Tempo Player then compares this pace with the beats per minute of songs collected in a SQL Lite database, and plays the one most similar. 
 %The beats per minutes of each song are found by querying a web service. 
-\begin{figure}[h!]
+\begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
   \centering
-    \includegraphics[scale=0.1]{Images/Screenshots/settings.png}
-  \caption{Screenshot showing the settings screen.}
-  \label{fig:settings}
-\end{figure}
-\begin{figure}[h!]
-  \centering
-    \includegraphics[scale=0.1]{Images/Screenshots/settingsPath.png}
+    \includegraphics[scale=0.2]{Images/Screenshots/settings.png}
+  \caption{Screenshot showing the \newline settings screen.}
+  \label{fig:settingsPath}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+\centering
+    \includegraphics[scale=0.2]{Images/Screenshots/settingsPath.png}
   \caption{Screenshot showing the ``Reset paths'' screen of the settings screen.}
   \label{fig:settingsPath}
+\end{minipage}
 \end{figure}
