citep replaced with citet

--- a/Content/TemporaryWorkSheets/Methodology/retrospective4.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective4.tex
@@ -67,7 +67,8 @@ We estimated 70 hours of work for this iteration, which is a bit more than we sp
 Not much energy was spent on refactoring - most things were spent on new functionality - because next iteration is going to be dedicated to refactoring.
 Minor bad smells were corrected.
 
-We plan on making a thorough refactoring plan, for the next iteration, based on \citep{fowler:refac}.
+We plan on making a thorough refactoring plan, for the next iteration, based on \citet{fowler:refac}.
+
 
 \subsubsection{Simple Design}
 Simple design has been followed fairly well in this iteration, but because of the lack of refactoring some parts of the program are a little more messy than they should be - the plan is to fix this in the next iteration.
