--- a/Content/TempoPlayer/tour.tex
+++ b/Content/TempoPlayer/tour.tex
@@ -29,7 +29,7 @@ It is also possible to seek to a position in the currently playing song by dragg
   \centering
     \includegraphics[scale=0.2]{Images/Screenshots/settings.png}
   \caption{Screenshot showing the \newline settings screen.}
-  \label{fig:settingsPath}
+  \label{fig:settings}
 \end{minipage}%
 \begin{minipage}{.5\textwidth}
 \centering
