--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -34,7 +34,7 @@
  year = {2000},
  isbn = {0-201-61641-6},
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
- edition = {2nd}
+ edition = {1st}
 } 
 
 @article{musicRunEffectArticle,
