Moved "Tactile" interface to report.

--- a/Report.tex
+++ b/Report.tex
@@ -42,6 +42,10 @@
 \label{chap:stepCounter}
 \input{Content/StepCounter/stepCounter}
 
+\chapter{Tactile Interface}
+\label{chap:tactileInterface}
+\input{Content/TactileInterface/tactileInterface}
+
 \chapter{Test}
 \label{chap:test}
 \input{Content/Test/test}
@@ -74,10 +78,6 @@
 \end{vplace}
 \input{Appendix/appendix}
 
-\chapter{Tactile Interface - (After Step Counter)}
-\label{chap:tactileInterface}
-\input{Content/TactileInterface/tactileInterface}
-
 
 \chapter{Temporary Work Sheets}
 \label{chap:temp}
@@ -87,8 +87,6 @@
 
 
 \input{Appendix/appendixDVD}
-
-
 
 
 
