--- a/Content/MusicPlayer/musicPlayer.tex
+++ b/Content/MusicPlayer/musicPlayer.tex
@@ -1,3 +1,4 @@
+\input{Content/MusicPlayer/introduction}
 \input{Content/MusicPlayer/useCases}
 \input{Content/MusicPlayer/implementation}
 \input{Content/MusicPlayer/methodologyObservations}
