--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -21,17 +21,18 @@ Based on this knowledge the first problem can be stated:
 
 %Second Problem - UI%
 \noindent Operating a smartphone while running is difficult, especially if it is placed in the pocket or on the arm of the runner.
-In order for the runner to operate the smartphone properly, the runner would have to stop running, or focus more than normally, which can disrupt the runner's form, and lead to injuries and accidents
+In order for the runner to operate the smartphone properly, the runner would have to stop running, or focus more than normally, which can disrupt the runner's form, and lead to injuries and accidents.
 Based on this knowledge the second problem can be stated: 
 
 \begin{center}
-\textit{How can a smartphone application be operated without disrupting the runner's form or concentration?}
+\textit{How can a smartphone application be operated without disrupting the runner's form and/or concentration?}
 \end{center}
 \pagebreak
 
 
 %Third Problem - Methodology%
-\noindent Most large scale software projects fail. According to \citet{gartner:failure} \textit{``A full 66 percent of large scale projects fail”}.
+%\noindent Most large scale software projects fail. 
+\noindent According to \citet{gartner:failure} \textit{``A full 66 percent of large scale projects fail”}.
 Although this is not a large scale project, some of the same pitfalls exist.
 One way to avoid some of these pitfalls, is to use \textit{``a sound methodology”} according to \citet{dorsey:methodologyReason}.
 
