intro for step counter

--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -32,8 +32,7 @@ Based on this knowledge the second problem can be stated:
 
 %Third Problem - Methodology%
 %\noindent Most large scale software projects fail. 
-\noindent According to \citet{gartner:failure} \textit{``A full 66 percent of large scale projects fail”}.
-Although this is not a large scale project, some of the same pitfalls exist.
+\noindent According to \citet{gartner:failure} \textit{``A full 66 percent of large scale projects fail”}, and although this is not a large scale project, some of the same pitfalls exist.
 One way to avoid some of these pitfalls, is to use \textit{``a sound methodology”} according to \citet{dorsey:methodologyReason}.
 
 There are multiple factors that influence the success of a project, however, as \citet{dorsey:methodologyReason} states \textit{``using a structured systems development methodology is one of the critical success factors in a	systems development project.”}.
