--- a/Content/StepCounter/intro.tex
+++ b/Content/StepCounter/intro.tex
@@ -1,6 +1,3 @@
-In the following sections, the development of our step counter module will be explained.
-\Christoffer{Intro omskrives?}
+In this chapter, the development of the step counter module is explained. The chapter separated into user stories which were the basis for developing the step counter, technology explorations made, implementation of the counter and lastly methodology observations made in regards to XP during the development of the step counter. 
 
-In our implementation of the step counter we decided to split the task into a data collection task, testing of algorithm task and an implementation on android task. The reason for doing so is that our approach writing tests, code, and then run the test is unsuited for implementing a step counter. This is because the running of tests cannot be automated as it requires a person to move around with the smartphones.
-
-As there is no built-in step counter library available for Android API version 16, we had to choose an algorithm. We found the precision could vary greatly from algorithm to algorithm, so we had to test algorithms against each other. In order to do so we first had to generate some sample data collected from the smartphones' sensors.
+In our implementation of the step counter we decided to split the task into a data collection task, testing of algorithm task and an implementation on android task. The reason for doing so is that our normal approach of writing tests, code, and then run the test is unsuited for implementing a step counter. This is because the running of tests cannot be automated as it requires a person to move around with the smartphone.
