--- a/Content/Test/testReflection.tex
+++ b/Content/Test/testReflection.tex
@@ -1,4 +1,4 @@
-\section{Test - Reflection}
+\section{Reflections About Test}
 This section is where the reflections about the programmatic part of the test should be. Hence NO reflections about methodology here.
 
 i.e. Unit tests were a good way to allow for refactoring, since it was easy to ensure the functionality was not altered. However, that required extensive unit tests, which we in some cases did not have. This caused some trouble in form of periodic bugs. To solve this we could create a specification of test cases based on the structure of the method. We did not implement this due to lack of feasibility.
