Added use case template to preamble.

--- a/preamble.tex
+++ b/preamble.tex
@@ -472,6 +472,18 @@ morekeywords={}
     {\color{#5}\textbf{#3: }#2}
   }
 }
+
+\newcommand{\story}[4]{
+\begin{table}[H]
+\begin{tabularx}{\textwidth}{>{\hsize=.4\hsize}l X}
+\noindent \textsc{Title:} & #1\\
+\noindent \textsc{Priority:} & #2\\
+\noindent \textsc{Story:} & #3\\\\
+\noindent \textsc{\parbox[t]{2cm}{Acceptance\\Criteria:}} & \vspace{-7mm} #4\\
+\end{tabularx}
+\end{table}
+}
+
 \newcommand{\Alexander}[2][]{\namedtodo{#1}{#2}{Alexander}{green}{black}}
 \newcommand{\Christoffer}[2][]{\namedtodo{#1}{#2}{Christoffer}{orange}{black}}
 \newcommand{\Dan}[2][]{\namedtodo{#1}{#2}{Dan}{blue!80}{white}}
