Draft fore XP explained

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -2,18 +2,100 @@
 % 2 XP's: 2000 and 200? - differences.
 % General introduction to XP2k
 Extreme Programming (XP) is a software development methodology created by Kent Beck, and this section is based on his book \textit{Extreme Programming Explained (1999)} \citep{xp:explained}. 
-According to Beck, XP is ``\textit{a lightewight, efficient, low-risk, flexible, predictable, scientific, and fun way to develop software.}''
+Extreme Programming is supposed to be a lightweight, efficient, and fun approach to developing software.
+
+\noindent The methodology consists of the 12 practices:
+
+\begin{tabularx}{\textwidth}{X X X}
+	40-hour Week				 & Coding Standards & Collective Ownership \\
+	Continuous Integration	  & Metaphor         	 & On-site Customer     \\
+	Pair Programming			& Planning Game		& Refactoring          \\
+	Simple Design          		  & Small Releases   	& Testing             
+\end{tabularx}
+
+Some of these practices are more coherent than others. 
+While some enforces each other, others may be unrelated. (i.e. coding standards enforces collective ownership, but on-site customer and testing are unrelated.)
+The correlations can be split into the three categories, Programming, Team Practice, Process.
+
+\subsection{Programming}
+The programming category is for the practices directly involved with the coding.
+In this category are the practices: Coding Standards, Refactoring, Simple Design, and Testing.
+
+\paragraph{The testing practice} covers both user tests and test-first development.
+This means that before writing any code, a unit test specifying the functionality is written.
+This does also apply when expanding existing code, meaning before writing the additional code, a unit test is written.
+
+\paragraph{Coding Standards} are important in programming as well as on a team level.
+Coding standards at the programming level are used to, quickly letting anyone read code written by others.
+Hence making it faster to implement additional features to existing code.
+
+\paragraph{Simple Design} 
+
+\paragraph{Refactoring} is used when the method 
 
 
 
-%% What is XP?
-%% What makes it extreme?
-%%%% Transition to pratices
 
-What is the XP methodology?
 
-What does Extreme mean? E.g. Review is much more important and useful, so turn it up in comparison to other methodologies.
 
-Start of Beck books.
 
-% The practices
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\subsection{40-hour Week}
+
+\subsection{Coding Standards}
+
+\subsection{Collective Ownership}
+
+\subsection{Continuous Integration}
+
+\subsection{Metaphor}
+
+\subsection{On-site Customer}
+
+\subsection{Pair Programming}
+
+\subsection{Planning}
+
+\subsection{Refactoring}
+
+\subsection{Simple Design}
+
+\subsection{Small Releases}
+
+\subsection{Testing}
+
+
+
+
+
+
+
+
+
+
+
+
+
+When looking closer at these practices, it becomes clear that these practices all are based on the principles of \textit{Communication, Courage, Feedback, and Simplicity}.
