--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -2,3 +2,17 @@
 What are the differences in philosophies?
 E.g. SCRUM is all management, whereas XP is both programming and management.
 E.g. Different philosophies about review, quality, etc.
+
+
+
+
+
+
+...
+Where SCRUM only acts on a Team Practice and Process level, XP additionally acts on a Programming level.
+The 12 practices can be attributed to which level they act upon.
+Programming: Simple Design, Testing, Refactoring, Coding Standards.
+Team Practices: Collective ownership, Continuous Integration, Metaphor, Coding Standard, 40-hour week, pair programming, small releases.
+Process: On-site Customer, testing, small releases, planning game.
+
+Some practices cross levels.
