Updated bib to use ISO dates. Added description of android terms.

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -24,7 +24,7 @@
   author={},
   year={},
   howpublished = "\url{}",
-  note = "[Online; Accessed dd-mm-yyyy]"
+  note = "[Online; Accessed yyyy-mm-dd]"
 }
 
 
@@ -79,7 +79,7 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
   author={James Grenning},
   year={2002},
   howpublished = "\url{http://renaissancesoftware.net/files/articles/PlanningPoker-v1.1.pdf}",
-  note = "[Online; Accessed 03-03-2015]"
+  note = "[Online; Accessed 2015-03-03]"
 }
 
 @book{fowler:refac,
@@ -96,7 +96,7 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
   author={Neil Zhao},
   year={2010},
   howpublished = "\url{http://www.analog.com/media/en/technical-documentation/analog-dialogue/pedometer.pdf}",
-  note = "[Online; Accessed 21-04-2015]"
+  note = "[Online; Accessed 2015-04-21]"
 }
 
 @misc{android:sensor,
@@ -104,7 +104,23 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
   author={Google Android},
   year={2015},
   howpublished = "\url{http://developer.android.com/guide/topics/sensors/sensors_overview.html}",
-  note = "[Online; Accessed 21-04-2015]"
+  note = "[Online; Accessed 2015-04-21]"
+}
+
+@misc{android:terms,
+  title={API Guide Glossary},
+  author={Google Android},
+  year={2015},
+  howpublished = "\url{https://developer.android.com/guide/appendix/glossary.html}",
+  note = "[Online; Accessed 2015-05-18]"
+}
+
+@misc{android:fragment,
+  title={Fragments},
+  author={Google Android},
+  year={2015},
+  howpublished = "\url{http://developer.android.com/guide/components/fragments.html}",
+  note = "[Online; Accessed 2015-05-18]"
 }
 
 @book{xp:estimation,
@@ -128,5 +144,5 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
 	author={Gartner Inc.},
 	year={2007},
 	howpublished = "\url{http://web.archive.org/web/20070308151701/http://www.gartner.com/it/products/consulting/critical_program_mgmt.jsp}",
-	note = "[Online; Accessed 13-05-2015 but originally showed on 08-03-2007.]"
+	note = "[Online; Accessed 2015-05-13 but originally showed on 2007-03-08.]"
 }
