--- a/Content/MusicPlayer/musicPlayer.tex
+++ b/Content/MusicPlayer/musicPlayer.tex
@@ -1,4 +1,5 @@
 \input{Content/MusicPlayer/introduction}
+\input{Content/MusicPlayer/androidTerms}
 \input{Content/MusicPlayer/useCases}
 \input{Content/MusicPlayer/implementation}
 \input{Content/MusicPlayer/methodologyObservations}
