--- a/Content/MusicPlayer/useCases.tex
+++ b/Content/MusicPlayer/useCases.tex
@@ -1,4 +1,6 @@
-\section{User Storiese}
+\section{User Stories}
+
+
 
 \story{Title}{Priority}{Story}{Acceptance Criteria}
 This section should describe the use cases set up for the Music Player feature.
