--- a/Content/Test/unitTest.tex
+++ b/Content/Test/unitTest.tex
@@ -5,7 +5,7 @@ The project was developed using a test-driven approach (TDD). This means that un
 
 Another purpose of using unit tests, is regression testing. When a change is made to the code base, things can easily break - especially in a complex system. When unit tests are in place, a change can be made and the unit tests can be run to check whether the system still passes all the tests, after then changes have been made. 
 
-\Cref{lst:testSnippet} shows a test helper from the source code of the project. The code checks whether the method \textit{getBPMfromJSON} extracts the expected value from the JSON. The JSON is contained in \textit{parameter}. It is in a helper method because it is used multiple places in the code. The test method shown in \Cref{lst:testSnipUsage} uses the helper to verify that the \textit{getBPMfromJSON} method returns -1 if given malformed JSON. The helper tests a private method and therefore uses \textit{invoke} as seen in line 14 in \Cref{lst:testSnippet}. Testing of private methods is further described in \Cref{sec:privTest}.
+\Cref{lst:testSnippet} shows a test helper from the source code of the project. The code checks whether the method \textit{getBPMfromJSON} extracts the expected value from the JSON. The JSON is contained in \textit{parameter}. It is in a helper method because it is used multiple places in the code. The test method shown in \Cref{lst:testSnipUsage} uses the helper to verify that the \textit{getBPMfromJSON} method returns -1 if given malformed JSON. The helper tests a private method and therefore uses \textit{invoke} as seen in line 14 in \Cref{lst:testSnippet}. A discussion of testing of private methods is can be found in \Cref{sec:privTest}.
 
 \begin{code}{lst:testSnippet}{Code which tests whether a correct beat per minute value is extracted from some JSON}
 \begin{lstlisting}
@@ -31,7 +31,7 @@ Another purpose of using unit tests, is regression testing. When a change is mad
     }
 \end{lstlisting}
 \end{code}
-\begin{code}{lst:testSnipUsage}{Code which uses a helper method to test whether -1 is returned if a method is given malformed JSON.}
+\begin{code}{lst:testSnipUsage}{Code which uses a helper method from \Cref{lst:testSnippet} to test whether -1 is returned if a method is given malformed JSON.}
 \begin{lstlisting}
 public void testGetBPMfromJSONNotValid(){
         testGetBPMfromJSONHelper(-1, "ø8å6æ68æ");
@@ -40,3 +40,7 @@ public void testGetBPMfromJSONNotValid(){
 \end{code}
 
 \subsection{\texttt{Reflection} for private methods}\label{sec:privTest}
+In our case, we deemed it necessary to test private methods. This came to be because we had an exception in a private method, and we decided to write a test to catch this exception. There is some debate as to whether it is good practice to test private methods or not, but ultimately we decided to do it. It cold be argued that it is the behaviour and not the methods themselves which should explicitly be tested. In that case, testing of the public interface and not private methods should not be done.
+%cons
+% client code (test) will break with change to private
+% 
