--- a/Content/MusicPlayer/androidTerms.tex
+++ b/Content/MusicPlayer/androidTerms.tex
@@ -8,7 +8,7 @@ A screen in the application implemented as a Java class with layout defined as X
 A fragment is intended to handle a part of the behaviour and UI of an Activity, especially useful for creating multi-pane UI's and adjusting the app to run on devices with different screen sizes.
 
 \subsection*{Service}
-A service runs in the background with the purpose of handling persistent actions, e.g. playing music.
+A service runs in the background with the purpose of handling long-running, persistent actions, e.g. playing music when the app is minimised. It does not provide a user interface.
 
 \subsection*{Sensors and Listeners}
-The phone has a number of sensors, e.g. an accelerometer, and these can be accessed by listeners. A listener implements methods like \texttt{onSensorChanged()}, which returns a value when the sensor receives a new input. Listeners are also used to register input events like clicks/touches.
+The phone has a number of sensors, e.g. an accelerometer, and these can be accessed by listeners. A listener implements methods like \texttt{onSensorChanged()}, which is called with a value when the sensor receives a new input. Listeners are also used to detect input events like button clicks and touches.
