added intro files

--- a/Content/SongScanner/songScanner.tex
+++ b/Content/SongScanner/songScanner.tex
@@ -1,3 +1,4 @@
+\input{Content/SongScanner/intro}
 \input{Content/SongScanner/useCases}
 \input{Content/SongScanner/implementation}
 \input{Content/SongScanner/methodologyObservations}
