--- a/Content/MusicPlayer/implementation.tex
+++ b/Content/MusicPlayer/implementation.tex
@@ -1,4 +1,5 @@
 \section{Implementation}
-This section should describe the programmatically interesting and relevant parts of the Music Player.
+The Music Player module consists of a number of classes, where to most notable are \texttt{DynamicQueue}, \texttt{MusicPlayerActivity}, and \texttt{MusicPlayerService}. \texttt{DynamicQueue} handles navigation, and it makes sure the queue of songs matches the user's running speed. \texttt{MusicPlayerActivity} shows a UI on the screen and handles user inputs, including navigation and volume changes. \texttt{MusicPlayerService} handles the actual playback of songs, and because it is implemented as a service it is possible to keep playing songs in the background, i.e., without requiring \texttt{MusicPlayerActivity} to be visible.
+
 
 i.e. We found that trying to stop the music player while not loaded caused it to skip to next song. It was due to the fact this was an illegal action in that state, as seen in Figure (Android graph over mediaplayer states). We fixed this issue by implementing something, as seen in Listing (Code snipped of interesting code).
