--- a/Content/MusicPlayer/useCases.tex
+++ b/Content/MusicPlayer/useCases.tex
@@ -1,7 +1,5 @@
 \section{User Stories}
-The following are some of the most interesting user stories used to develop the Music Player module. 
-
-\Dan{Should these be filtered a bit? Organised differently? Be described ``with words''?}
+The following are some of the most interesting user stories used to develop the Music Player module. Some of the stories depend on other modules: it is, for example, not possible to ``Play .mp3 files'' without the Song Scanner, which is described in \Cref{chap:songScanner}.
 
 \story{Play .mp3 files.}{High}
 {As a user, I, want to listen to the .mp3 files stored on my device.}
@@ -9,20 +7,6 @@ The following are some of the most interesting user stories used to develop the 
 \item I am able to play a .mp3 file stored on the device.
 \item I am able to regulate the volume when listening to the song.
 \item I am not able to open other file types than .mp3.
-\end{itemize}}
-
-\story{Locate .mp3 files on device.}{High}
-{As a user, I, want the application to search the directories I specify for .mp3 files.}
-{\begin{itemize}
-\item When I start the application, it finds the .mp3 files stored in /sdcard/Music.
-\end{itemize}}
-
-\story{Obtain beats-per-minute for song.}{High}
-{As a user, I, want the application to automatically obtain the beats-per-minute (BPM) of the .mp3 files located.}
-{\begin{itemize}
-\item Obtain 113 as BPM for Rick Astley's Never Gonna Give You Up, when locating the 12 .mp3 files stored in /sdcard/Music.
-\item If no BPM is found for a song, it will not be playable.
-\item I am able to manually set BPM for a song.
 \end{itemize}}
 
 \story{Navigate songs.}{High}
@@ -48,7 +32,6 @@ It should also be possible to seek in the playing song.}
 {\begin{itemize}
 \item The application must be able to match my pace with appropriate songs, when the smartphone is held in either the hand, the pocket, or on the arm.
 \end{itemize}}
-
 
 %\story{Title}{Priority}{Story}{Acceptance Criteria}
 %This section should describe the use cases set up for the Music Player feature.
