--- a/Content/SongScanner/useCases.tex
+++ b/Content/SongScanner/useCases.tex
@@ -1,4 +1,16 @@
 \section{User Stories}
-This section should describe the use cases set up for the Music Player feature.
+The following are the user stores used for the Song Scanner.
 
-i.e. The Music Player should play the next song after completion of the current playing song.
+\story{Locate .mp3 files on device.}{High}
+{As a user, I, want the application to search the directories I specify for .mp3 files.}
+{\begin{itemize}
+\item When I start the application, it finds the .mp3 files stored in /sdcard/Music.
+\end{itemize}}
+
+\story{Obtain beats-per-minute for song.}{High}
+{As a user, I, want the application to automatically obtain the beats-per-minute (BPM) of the .mp3 files located.}
+{\begin{itemize}
+\item Obtain 113 as BPM for Rick Astley's Never Gonna Give You Up, when locating the 12 .mp3 files stored in /sdcard/Music.
+\item If no BPM is found for a song, it will not be playable.
+\item I am able to manually set BPM for a song.
+\end{itemize}}
