--- a/Content/Test/unitTest.tex
+++ b/Content/Test/unitTest.tex
@@ -5,39 +5,52 @@ The project was developed using a test-driven approach (TDD). This means that un
 
 Another purpose of using unit tests, is regression testing. When a change is made to the code base, things can easily break - especially in a complex system. When unit tests are in place, a change can be made and the unit tests can be run to check whether the system still passes all the tests, after then changes have been made. 
 
-\Cref{lst:testSnippet} shows a test helper from the source code of the project. The code checks whether the method \textit{getBPMfromJSON} extracts the expected value from the JSON. The JSON is contained in \textit{parameter}. It is in a helper method because it is used multiple places in the code. The test method shown in \Cref{lst:testSnipUsage} uses the helper to verify that the \textit{getBPMfromJSON} method returns -1 if given malformed JSON. The helper tests a private method and therefore uses \textit{invoke} as seen in line 14 in \Cref{lst:testSnippet}. A discussion of testing of private methods is can be found in \Cref{sec:privTest}.
+An example of how a unit test was used, is when we wanted to make sure the code which loaded a song from the database functioned correctly. The test approach looked as such
 
-\begin{code}{lst:testSnippet}{Code which tests whether a correct beat per minute value is extracted from some JSON}
-\begin{lstlisting}
- private void testGetBPMfromJSONHelper(int expectedValue, String parameter){
-        SongScanner songScannerClass = SongScanner.getInstance(getContext());
-        int actualValue;
+\begin{itemize}
+\item Load valid song
+\subitem Verify whether valid song is loaded
+\item Load invalid song
+\subitem Verify that invalid song is not loaded
+\item Load song with null value
+\subitem Verify that song is not loaded
+\end{itemize} 
 
-        Method privateMethod = TestHelper.testPrivateMethod(TestHelper.Classes.SongScanner,
-                "getBPMfromJSON",
-                getContext());
+So if, at some point, someone refactors the method which loads a song into the database and accidentally removes the part of the code handling a null check of the song, the unit test will fail. This is because the code no longer has the same functionality as the previous version of the code. Therefore, the code change needs to be rewritten allow the same functionality as before the change.
 
-        if (privateMethod == null) {
-            assertTrue(false);
-        }
+%\Cref{lst:testSnippet} shows a test helper from the source code of the project. The code checks whether the method \texttt{getBPMfromJSON()} extracts the expected value from the JSON. The JSON is contained in \textit{parameter}. It is in a helper method because it is used multiple places in the code. The test method shown in \Cref{lst:testSnipUsage} uses the helper to verify that the \texttt{getBPMfromJSON()} method returns -1 if given malformed JSON. The helper tests a private method and therefore uses \textit{invoke} as seen in line 14 in \Cref{lst:testSnippet}. A discussion of testing of private methods is can be found in \Cref{sec:privTest}.
 
-        try {
-            actualValue = (int) privateMethod.invoke(songScannerClass, parameter);
-            assertEquals(expectedValue, actualValue);
-        } catch (IllegalAccessException | InvocationTargetException e) {
-            e.printStackTrace();
-            Assert.fail();
-        }
-    }
-\end{lstlisting}
-\end{code}
-\begin{code}{lst:testSnipUsage}{Code which uses a helper method from \Cref{lst:testSnippet} to test whether -1 is returned if a method is given malformed JSON.}
-\begin{lstlisting}
-public void testGetBPMfromJSONNotValid(){
-        testGetBPMfromJSONHelper(-1, "ø8å6æ68æ");
-}
-\end{lstlisting}
-\end{code}
+%\begin{code}{lst:testSnippet}{Code which tests whether a correct beat per minute value is extracted from some JSON}
+%\begin{lstlisting}
+% private void testGetBPMfromJSONHelper(int expectedValue, String parameter){
+%        SongScanner songScannerClass = SongScanner.getInstance(getContext());
+%        int actualValue;
+%
+%        Method privateMethod = TestHelper.testPrivateMethod(TestHelper.Classes.SongScanner,
+%                "getBPMfromJSON",
+%                getContext());
+%
+%        if (privateMethod == null) {
+%            assertTrue(false);
+%        }
+%
+%        try {
+%            actualValue = (int) privateMethod.invoke(songScannerClass, parameter);
+%            assertEquals(expectedValue, actualValue);
+%        } catch (IllegalAccessException | InvocationTargetException e) {
+%            e.printStackTrace();
+%            Assert.fail();
+%        }
+%    }
+%\end{lstlisting}
+%\end{code}
+%\begin{code}{lst:testSnipUsage}{Code which uses a helper method from \Cref{lst:testSnippet} to test whether -1 is returned if a method is given malformed JSON.}
+%\begin{lstlisting}
+%public void testGetBPMfromJSONNotValid(){
+%        testGetBPMfromJSONHelper(-1, "ø8å6æ68æ");
+%}
+%\end{lstlisting}
+%\end{code}
 
 \subsection{\texttt{Reflection} for private methods}\label{sec:privTest}
 In our case, we deemed it necessary to test private methods. This came to be because we had an exception in a private method, and we decided to write a test to catch this exception. There is some debate as to whether it is good practice to test private methods or not, but ultimately we decided to do it. It could be argued that it is the over-all behaviour of the system, and not the implementation which should explicitly be tested. In that case, testing of the public interface and not private methods should not be done.
