--- a/Content/StepCounter/useCases.tex
+++ b/Content/StepCounter/useCases.tex
@@ -1,1 +1,21 @@
 \section{User Stories}
+The following are the user stories used as a requirement basis to develop the step counter
+
+\subsection{Step Counter}
+\story{Detect the pace of the user.}{High}
+{As a user, I, want the application to detect my pace and display it on the screen. }
+{\begin{itemize}
+\item Criteria 1
+\end{itemize}}
+{\begin{itemize}
+\item Precondition: 
+\subitem $-$ The application must be launched in the MusicPlayer Activity.
+\subitem $-$ The user must have the device on his arm.
+
+\item Procedure:
+\subitem $-$ Start running.
+\subitem $-$ Increase running pace.
+
+\item Postcondition:
+\subitem $-$ Verify pace is displayed on the screen and increases.
+\end{itemize}}
