Started implementation for MP.

--- a/Content/MusicPlayer/useCases.tex
+++ b/Content/MusicPlayer/useCases.tex
@@ -32,7 +32,7 @@ It should also be possible to seek in the playing song.}
 {\begin{itemize}
 \item The application must be able to match my pace with appropriate songs, when the smartphone is held in either the hand, the pocket, or on the arm.
 \end{itemize}}
-
+\Dan{``Adjust music speed'' should either have a higher priority or there should be one specifically for finding appropriate songs.}
 %\story{Title}{Priority}{Story}{Acceptance Criteria}
 %This section should describe the use cases set up for the Music Player feature.
 
