--- a/Content/MusicPlayer/implementation.tex
+++ b/Content/MusicPlayer/implementation.tex
@@ -1,5 +1,15 @@
 \section{Implementation}
 The Music Player module consists of a number of classes, where to most notable are \texttt{DynamicQueue}, \texttt{MusicPlayerActivity}, and \texttt{MusicPlayerService}. \texttt{DynamicQueue} handles navigation, and it makes sure the queue of songs matches the user's running speed. \texttt{MusicPlayerActivity} shows a UI on the screen and handles user inputs, including navigation and volume changes. \texttt{MusicPlayerService} handles the actual playback of songs, and because it is implemented as a service it is possible to keep playing songs in the background, i.e., without requiring \texttt{MusicPlayerActivity} to be visible.
 
+\subsection{DynamicQueue}
+This class is named based on the fact that it will update dynamically, depending on the runnin speed of the user.
 
-i.e. We found that trying to stop the music player while not loaded caused it to skip to next song. It was due to the fact this was an illegal action in that state, as seen in Figure (Android graph over mediaplayer states). We fixed this issue by implementing something, as seen in Listing (Code snipped of interesting code).
+\subsection{MusicPlayerActivity}
+This is the central point of the application, responsible for managing the rest of the application and giving the user a way of interacting with it. Is starts the \texttt{MusicPlayerService}, calls the \texttt{DynamicQueue} for songs to play, attaches listeners to the buttons, making them clickable, and it checks that there are enough songs in the specified folder, sending the user to the settings menu if this is not the case.
+
+Because this class is responsible for managing so many things, that it was necessary to move some of its functionality to another class, \texttt{Initializers}, to prevent \texttt{MusicPlayerActivity} from becoming too confusing. \texttt{Initializers} is responsible for all the methods to set click listeners, and initialize the dynamic queue and the cover flow, which shows the album cover of each song in the queue.
+\Dan{Please rewrite this to make more sense.}
+
+\subsection{MusicPlayerService} 
+
+\Dan{Fit this stuff in:} We found that trying to stop the music player while not loaded caused it to skip to next song. It was due to the fact this was an illegal action in that state, as seen in Figure (Android graph over mediaplayer states). We fixed this issue by implementing something, as seen in Listing (Code snipped of interesting code).
