changed chapter title and inserted NGUI user stories

--- a/Report.tex
+++ b/Report.tex
@@ -42,7 +42,7 @@
 \label{chap:stepCounter}
 \input{Content/StepCounter/stepCounter}
 
-\chapter{Tactile Interface}
+\chapter{Non-graphical User Interface}
 \label{chap:tactileInterface}
 \input{Content/TactileInterface/tactileInterface}
 
