added quotation marks

--- a/Content/SongScanner/useCases.tex
+++ b/Content/SongScanner/useCases.tex
@@ -10,7 +10,7 @@ The following are the user stores used for the Song Scanner.
 \story{Obtain beats-per-minute for song.}{High}
 {As a user, I, want the application to automatically obtain the beats-per-minute (BPM) of the .mp3 files located.}
 {\begin{itemize}
-\item Obtain 113 as BPM for Rick Astley's Never Gonna Give You Up, when locating the 12 .mp3 files stored in /sdcard/Music.
+\item Obtain 113 as BPM for Rick Astley's ``Never Gonna Give You Up'', when locating the 12 .mp3 files stored in /sdcard/Music.
 \item If no BPM is found for a song, it will not be playable.
 \item I am able to manually set BPM for a song.
 \end{itemize}}
