--- a/Content/MusicPlayer/androidTerms.tex
+++ b/Content/MusicPlayer/androidTerms.tex
@@ -5,10 +5,10 @@ When explaining the implementation of the modules, some Android specific terms w
 A screen in the application implemented as a Java class with layout defined as XML. It can handle UI events and call methods.
 
 \subsection*{Fragment}
-A fragment is intended to handle a part of the behaviour and UI of an Activity, especially useful for creating multi-pane UI's and adjusting the app to run on devices with different screen sizes.
+A fragment is intended to handle a part of the behaviour and UI of an Activity, especially useful for creating multi-pane UI's and adjusting the application to run on devices with different screen sizes.
 
 \subsection*{Service}
-A service runs in the background with the purpose of handling long-running, persistent actions, e.g. playing music when the app is minimised. It does not provide a user interface.
+A service runs in the background with the purpose of handling long-running, persistent actions, e.g. playing music when the application: is minimised. It does not provide a user interface.
 
 \subsection*{Sensors and Listeners}
 The phone has a number of sensors, e.g. an accelerometer, and these can be accessed by listeners. A listener implements methods like \texttt{onSensorChanged()}, which is called with a value when the sensor receives a new input. Listeners are also used to detect input events like button clicks and touches.
