--- a/Content/Test/intro.tex
+++ b/Content/Test/intro.tex
@@ -1,3 +1,3 @@
 Testing is important in software development. It is critical since it is a way of ensuring the software developed is of a certain quality. This can either be the quality of the code itself (unit tests) or the degree to which it fulfills a customer's requirements (acceptance tests).  
 
-In this chapter the types of tests performed during the development app are described. The types of tests used were acceptance tests and unit tests. The advantages and disadvantages of unit testing, the group experienced during development are also discussed. Lastly the group's reflections about testing 
+In this chapter the types of tests performed during the development application are described. The types of tests used were acceptance tests and unit tests. The advantages and disadvantages of unit testing, the group experienced during development are also discussed. Lastly the group's reflections about testing 
