ivans todos added

--- a/Content/MusicPlayer/methodologyObservations.tex
+++ b/Content/MusicPlayer/methodologyObservations.tex
@@ -1,4 +1,5 @@
 \section{Methodology Observations}
+\Ivan{Overvej hvor det er bedst at placere metodologi-observationer. Hvis vi bliver som vi er nu, så skriv observationer der passer til perioden og byg løbende en forståelse op, som bliver analyseret til sidst. Fortæl det gerne som ``historier'', så det er lidt spændende at læse.}
 This section should contain the observation about the XP methodology gathered during the development of the Music Player.
 
 i.e. When developing the music player we have trouble adhering to the \texttt{Simple Design} principle, which states ``Only develop what is need now'', because we know we will implement additional features later, which lead us to implement methods for future use.
