--- a/Content/ReflectionMethodology/reflectionMethodology.tex
+++ b/Content/ReflectionMethodology/reflectionMethodology.tex
@@ -1,3 +1,4 @@
+\Ivan{Overvej hvor det er bedst at placere metodologi-observationer. Hvis vi bliver som vi er nu, så skriv observationer der passer til perioden og byg løbende en forståelse op, som bliver analyseret til sidst. Fortæl det gerne som "historier", så det er lidt spændende at læse.}
 \input{Content/ReflectionMethodology/reflectionIntroduction}
 
 \input{Content/ReflectionMethodology/reflectionPairProgramming}
