--- a/Content/TemporaryWorkSheets/Methodology/retrospective2.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective2.tex
@@ -40,7 +40,7 @@ We decided to discard the old estimations and measurements due to their imprecis
 
 In this iteration we mainly worked on one large task (GUI), which should have been decomposed into many smaller tasks. Further we should be better to create new tasks instead of just added found issues and development to a todo list.
 
-XP makes use of the planning game for estimation of use cases. We first knew the game as an individual exercise (explained), but later found, in the planning XP book, a collaborative version was described. We made/make use of planning poker as it has some advantages over the individual version of planning game. We later found that planning poker was very similar to the collaborative version of the planning game. (REMEMBER TO CHECK SOURCES) 
+XP makes use of the planning game for estimation of use cases. We first knew the game as an individual exercise (explained), but later found, in the planning XP book, a collaborative version was described. We made/make use of planning poker as it has some advantages over the individual version of planning game. We later found that planning poker was very similar to the collaborative version of the planning game. \Christoffer{REMEMBER TO CHECK SOURCES} 
 
 \subsubsection{Refactoring}
 We found that our quality is not good enough, so we will in the future (against XP recommendations) have explicit tasks for refactoring. \Ivan{see fowler}
