--- a/Content/MusicPlayer/musicPlayer.tex
+++ b/Content/MusicPlayer/musicPlayer.tex
@@ -1,3 +1,5 @@
+\Ivan{Overvej titel der beskriver at kapitlet handler om udvikling}
+\Ivan{Overvej at ændre kapitelstrukturen. Kapitlet bliver nemt en rodebunke}
 \input{Content/MusicPlayer/introduction}
 \input{Content/MusicPlayer/androidTerms}
 \input{Content/MusicPlayer/useCases}
